# RAG

./: .env.example  .gitignore  Prompt.md  README.md  pyproject.toml
.omo/run-continuation/: ses_10e176068ffemsU1Eg1rFHsO9t.json
app/: main.py
app/core/: config.py  logger.py
